[package]
name = "mapquest"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

description = "A wrapper for the Mapquest REST api"
readme = "README.md"
repository = "https://github.com/stillinbeta/mapquest"
license = "Apache-2.0"
keywords = ["geocoding", "mapquest", "maps"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"

[badges]
travis-ci = { repository = "stillinbeta/mapquest" }
